assets/ratings: updating btn disabled behaviour to be inline with other btns and update hover to ensure inner text still readable

--- a/adhocracy-plus/assets/scss/components/_a4-comments.scss
+++ b/adhocracy-plus/assets/scss/components/_a4-comments.scss
@@ -19,11 +19,6 @@
     padding: $spacer;
 }
 
-.a4-comments__box > .rating-up,
-.a4-comments__box > .rating-down {
-    border: none !important;
-}
-
 .a4-comments__box--left {
     padding-left: 0;
 
